--- a/wrap/CMakeLists.txt
+++ b/wrap/CMakeLists.txt
@@ -45,6 +45,7 @@ pybind11_add_module(_sgext
   sgext_init_py.cpp # Where module is added
   ${all_modules_python_sources} # all the collected sources in submodules
   )
+add_library(SGEXT::_sgext ALIAS _sgext)
 target_link_libraries(_sgext PRIVATE ${enabled_libs_})
 target_include_directories(_sgext PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}) # For pybind11_common.h
 target_include_directories(_sgext PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/submodules) # For #include "locate/sglocate_common.h"
