--- a/wrap/submodules/core/CMakeLists.txt
+++ b/wrap/submodules/core/CMakeLists.txt
@@ -1,3 +1,5 @@
+set(module_name_ core)
+set(module_path_ ${CMAKE_CURRENT_SOURCE_DIR})
 set(current_sources_
   sgcore_init_py.cpp
   array_utilities_py.cpp
@@ -11,8 +13,7 @@ set(current_sources_
   filter_spatial_graph_py.cpp
   transform_to_physical_point_py.cpp
   )
-set(module_name_ ${CMAKE_CURRENT_SOURCE_DIR})
-list(TRANSFORM current_sources_ PREPEND "${module_name_}/")
+list(TRANSFORM current_sources_ PREPEND "${module_path_}/")
 
 set(all_modules_python_sources
   ${all_modules_python_sources}
