--- a/wrap/submodules/extract/CMakeLists.txt
+++ b/wrap/submodules/extract/CMakeLists.txt
@@ -1,3 +1,5 @@
+set(module_name_ extract)
+set(module_path_ ${CMAKE_CURRENT_SOURCE_DIR})
 set(current_sources_
   sgextract_init_py.cpp
   merge_nodes_py.cpp
@@ -7,8 +9,7 @@ set(current_sources_
   detect_clusters_py.cpp
   collapse_clusters_py.cpp
   )
-set(module_name_ ${CMAKE_CURRENT_SOURCE_DIR})
-list(TRANSFORM current_sources_ PREPEND "${module_name_}/")
+list(TRANSFORM current_sources_ PREPEND "${module_path_}/")
 
 set(all_modules_python_sources
   ${all_modules_python_sources}
