--- a/wrap/submodules/generate/histo/CMakeLists.txt
+++ b/wrap/submodules/generate/histo/CMakeLists.txt
@@ -1,8 +1,8 @@
+set(module_path_ ${CMAKE_CURRENT_SOURCE_DIR})
 set(current_sources_
   histo_init_py.cpp
   )
-set(module_name_ ${CMAKE_CURRENT_SOURCE_DIR})
-list(TRANSFORM current_sources_ PREPEND "${module_name_}/")
+list(TRANSFORM current_sources_ PREPEND "${module_path_}/")
 
 set(all_modules_python_sources
   ${all_modules_python_sources}
