--- a/wrap/submodules/locate/CMakeLists.txt
+++ b/wrap/submodules/locate/CMakeLists.txt
@@ -1,10 +1,14 @@
+set(module_name_ locate)
+set(module_path_ ${CMAKE_CURRENT_SOURCE_DIR})
 set(current_sources_
   sglocate_init_py.cpp
   get_vtk_points_from_graph_py.cpp
   graph_points_locator_py.cpp
   )
-set(module_name_ ${CMAKE_CURRENT_SOURCE_DIR})
-list(TRANSFORM current_sources_ PREPEND "${module_name_}/")
+set(wrap_header_${module_name_}
+  sglocate_common.h
+  )
+list(TRANSFORM current_sources_ PREPEND "${module_path_}/")
 
 set(all_modules_python_sources
   ${all_modules_python_sources}
