--- a/wrap/submodules/scripts/CMakeLists.txt
+++ b/wrap/submodules/scripts/CMakeLists.txt
@@ -1,3 +1,5 @@
+set(module_name_ scripts)
+set(module_path_ ${CMAKE_CURRENT_SOURCE_DIR})
 set(current_sources_
   sgscripts_init_py.cpp
   thin_py.cpp
@@ -13,8 +15,7 @@ endif()
 if(SG_MODULE_VISUALIZE AND SG_MODULE_LOCATE)
   list(APPEND current_sources_ visualize_spatial_graph_py.cpp)
 endif()
-set(module_name_ ${CMAKE_CURRENT_SOURCE_DIR})
-list(TRANSFORM current_sources_ PREPEND "${module_name_}/")
+list(TRANSFORM current_sources_ PREPEND "${module_path_}/")
 
 set(all_modules_python_sources
   ${all_modules_python_sources}
