--- a/wrap/submodules/generate/CMakeLists.txt
+++ b/wrap/submodules/generate/CMakeLists.txt
@@ -1,10 +1,11 @@
+set(module_name_ generate)
+set(module_path_ ${CMAKE_CURRENT_SOURCE_DIR})
 set(current_sources_
   sggenerate_init_py.cpp
   simulated_annealing_generator_py.cpp
   contour_length_generator_py.cpp
   )
-set(module_name_ ${CMAKE_CURRENT_SOURCE_DIR})
-list(TRANSFORM current_sources_ PREPEND "${module_name_}/")
+list(TRANSFORM current_sources_ PREPEND "${module_path_}/")
 
 add_subdirectory(histo)
 
