--- a/wrap/submodules/visualize/CMakeLists.txt
+++ b/wrap/submodules/visualize/CMakeLists.txt
@@ -1,9 +1,10 @@
+set(module_name_ visualize)
+set(module_path_ ${CMAKE_CURRENT_SOURCE_DIR})
 set(current_sources_
   sgvisualize_init_py.cpp
   convert_to_vtk_unstructured_grid_py.cpp
   )
-set(module_name_ ${CMAKE_CURRENT_SOURCE_DIR})
-list(TRANSFORM current_sources_ PREPEND "${module_name_}/")
+list(TRANSFORM current_sources_ PREPEND "${module_path_}/")
 
 set(all_modules_python_sources
   ${all_modules_python_sources}
