Feature: Add voxelize_graph
Wrapped in sgext.voxelize_graph.
It allows to write the graph into a binary image, with values defined
by the maps: vertex_to_label_map and edge_to_label_map.

It also adds functions to create an edge_to_label_map from a vertex_to_label_map
and a functor: size_t(source_label, target_label).

Also adds cli voxelize_graph, in this case, instead of providing a file
with edge_to_label_map, if the string is == "max" it will use
the function create_edge_to_label_map_from_vertex_to_label_using_max.

--- a/cpp-scripts/CMakeLists.txt
+++ b/cpp-scripts/CMakeLists.txt
@@ -8,6 +8,7 @@ set(_scripts_targets
     fill_holes_binary
     resample_image
     graph_to_vtp
+    voxelize_graph
     )
 
 set(_scripts_targets_visualize # Using VTK
@@ -38,6 +39,9 @@ endif()
 
 add_executable(resample_image resample_image.cpp)
 target_link_libraries(resample_image ${_scripts_libs})
+
+add_executable(voxelize_graph voxelize_graph.cpp)
+target_link_libraries(voxelize_graph ${_scripts_libs})
 
 add_executable(thin thin.cpp)
 target_link_libraries(thin ${_scripts_libs})
