Feature: Add morphological_watershed
Using the label image resulting from voxelize_graph
and the original segmentation, we can restore the original segmentation
but with the labels from the graph.

Using itk::MorphologicalWatershedFromMarkersImageFilter

--- a/wrap/submodules/scripts/CMakeLists.txt
+++ b/wrap/submodules/scripts/CMakeLists.txt
@@ -9,6 +9,7 @@ set(current_sources_
   resample_image_py.cpp
   reconstruct_from_distance_map_py.cpp
   voxelize_graph_py.cpp
+  morphological_watershed_py.cpp
   )
 
 if(SG_MODULE_ANALYZE)
