CMake: Add module: ITKBridge (SGITKBridge)
- Rename `scripts_types.hpp` to `image_types.hpp`.
- Move all ITK-only functions:
   resample, voxelize, watershed, mask, fill_holes
  from `scripts` to `itk_bridge`.

Also, the wrappings of these functions have been moved from
 `sgext.scripts` to `sgext.itk`.

This change allows finer grain modularity for other modules that need
ITK but not the rest of scripts (which links to VTK and DGtal as well).

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -280,6 +280,9 @@ endif()
 if(SG_MODULE_DYNAMICS)
   add_subdirectory(modules/dynamics)
 endif()
+if(SG_REQUIRES_ITK)
+  add_subdirectory(modules/itk_bridge)
+endif()
 if(SG_MODULE_SCRIPTS)
   add_subdirectory(modules/scripts)
 endif()
