Move SGGEN to the module `tree`.
SGGEN is kept completely functional as a private repository in:
https://github.com/phcerdan/sggen

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,6 +32,7 @@ option(SG_MODULE_LOCATE "Use VTK KDtree for graph point location." ON)
 option(SG_MODULE_VISUALIZE "Functions to visualize spatial graphs and histograms." ON)
 option(SG_MODULE_GENERATE "Generate a graph with desired statistical parameters using simulated annealing." ON)
 option(SG_MODULE_DYNAMICS "Perform coarse grained dynamics simulation in the network." ON)
+option(SG_MODULE_TREE "Functions for tree-like graphs, for example study generations (bifurcations) from a root node." ON)
 option(SG_MODULE_VISUALIZE_WITH_QT "Use QT for some visualizations. It will also enable SG_MODULE_VISUALIZE." OFF)
 if(SG_MODULE_VISUALIZE_WITH_QT)
   set(SG_MODULE_VISUALIZE ON)
@@ -47,7 +48,7 @@ include(SGEXT_handle_dependencies)
 if(VISUALIZE OR SG_MODULE_VISUALIZE OR SG_MODULE_LOCATE OR SG_MODULE_COMPARE)
   set(SG_REQUIRES_VTK TRUE)
 endif()
-if(SG_MODULE_SCRIPTS OR SG_BUILD_CLI OR SG_ENABLE_ITK)
+if(SG_MODULE_SCRIPTS OR SG_MODULE_TREE OR SG_BUILD_CLI OR SG_ENABLE_ITK)
   set(SG_REQUIRES_ITK TRUE)
 endif()
 
@@ -282,6 +283,9 @@ if(SG_MODULE_DYNAMICS)
 endif()
 if(SG_REQUIRES_ITK)
   add_subdirectory(modules/itk_bridge)
+endif()
+if(SG_MODULE_TREE)
+  add_subdirectory(modules/tree)
 endif()
 if(SG_MODULE_SCRIPTS)
   add_subdirectory(modules/scripts)
