Fix python wrap of new module: tree

--- a/wrap/CMakeLists.txt
+++ b/wrap/CMakeLists.txt
@@ -32,6 +32,10 @@ if(SG_MODULE_COMPARE)
   add_subdirectory(submodules/compare)
   list(APPEND enabled_libs_ SGCompare)
 endif()
+if(SG_MODULE_TREE)
+  add_subdirectory(submodules/tree)
+  list(APPEND enabled_libs_ SGTree)
+endif()
 
 
 if(SG_MODULE_SCRIPTS)
@@ -87,6 +91,9 @@ if(SG_MODULE_LOCATE)
 endif()
 if(SG_MODULE_COMPARE)
   target_compile_definitions(_sgext PRIVATE SG_MODULE_COMPARE_ENABLED)
+endif()
+if(SG_MODULE_TREE)
+  target_compile_definitions(_sgext PRIVATE SG_MODULE_TREE_ENABLED)
 endif()
 if(SG_MODULE_SCRIPTS)
   target_compile_definitions(_sgext PRIVATE SG_MODULE_SCRIPTS_ENABLED)
