Add option SG_BUILD_TESTING_INTERACTIVE
Allowing to turn off interactive tests (view_image, etc).
It's ON by default, but it needs SG_BUILD_TESTING=ON to have an effect.

Turn it OFF in test/azure-pipelines.yml

--- a/modules/visualize/test/CMakeLists.txt
+++ b/modules/visualize/test/CMakeLists.txt
@@ -3,16 +3,19 @@ set(SG_MODULE_${SG_MODULE_NAME}_TEST_DEPENDS
   ${SG_MODULE_${SG_MODULE_NAME}_DEPENDS}
   ${GTEST_LIBRARIES})
 set(_with_qt_tests "")
-if(SG_MODULE_VISUALIZE_WITH_QT)
+if(SG_MODULE_VISUALIZE_WITH_QT AND SG_BUILD_TESTING_INTERACTIVE)
     set(_with_qt_tests test_visualize_histograms.cpp)
 endif()
-if(SG_MODULE_LOCATE)
+if(SG_MODULE_LOCATE AND SG_BUILD_TESTING_INTERACTIVE)
   set(_with_locate_tests test_visualize_spatial_graph_with_points.cpp)
   list(APPEND SG_MODULE_${SG_MODULE_NAME}_TEST_DEPENDS SGLocate)
 endif()
+if(SG_BUILD_TESTING_INTERACTIVE)
+  set(_with_interactive_tests test_visualize_spatial_graph.cpp)
+endif()
 set(SG_MODULE_${SG_MODULE_NAME}_TESTS
-  test_visualize_spatial_graph.cpp
   test_convert_to_vtk_unstructured_grid.cpp
+  ${_with_interactive_tests}
   ${_with_qt_tests}
   ${_with_locate_tests}
   )
