--- a/wrap/test/itk/CMakeLists.txt
+++ b/wrap/test/itk/CMakeLists.txt
@@ -1,8 +1,11 @@
+if(SG_BUILD_TESTING_INTERACTIVE)
+  set(_with_interactive_tests test_itk_view_image.py)
+endif()
 set(python_tests_
   test_itk_image.py
   test_itk_image_io.py
-  test_itk_view_image.py
   test_from_to_itk.py
+  ${_with_interactive_tests}
   )
 
 get_filename_component(module_name_ ${CMAKE_CURRENT_SOURCE_DIR} NAME)
