--- a/test/azure-pipelines.yml
+++ b/test/azure-pipelines.yml
@@ -32,7 +32,7 @@ stages:
         python -m pip install ninja
         python -m pip install -r requirements-dev.txt
         mkdir build
-        cmake -G Ninja -DCMAKE_BUILD_TYPE=Release -DBUILD_SHARED_LIBS:BOOL=OFF -DSG_BUILD_TESTING:BOOL=ON -DSG_MODULE_ANALYZE:BOOL=ON -DSG_MODULE_COMPARE:BOOL=ON -DSG_MODULE_LOCATE:BOOL=ON -DSG_MODULE_GENERATE:BOOL=ON -DSG_MODULE_DYNAMICS:BOOL=ON -DSG_MODULE_VISUALIZE:BOOL=ON -DSG_MODULE_VISUALIZE_WITH_QT:BOOL=OFF -DSG_WRAP_PYTHON:BOOL=ON -DDEPENDENCIES_BUILD_DIR:PATH=$(DEPENDENCIES_BUILD_DIR) -DBoost_USE_STATIC_LIBS:BOOL=ON -S "$(Build.SourcesDirectory)" -B "$(Build.SourcesDirectory)/build"
+        cmake -G Ninja -DCMAKE_BUILD_TYPE=Release -DBUILD_SHARED_LIBS:BOOL=OFF -DSG_BUILD_TESTING:BOOL=ON -DSG_BUILD_TESTING_INTERACTIVE:BOOL=OFF -DSG_MODULE_ANALYZE:BOOL=ON -DSG_MODULE_COMPARE:BOOL=ON -DSG_MODULE_LOCATE:BOOL=ON -DSG_MODULE_GENERATE:BOOL=ON -DSG_MODULE_DYNAMICS:BOOL=ON -DSG_MODULE_VISUALIZE:BOOL=ON -DSG_MODULE_VISUALIZE_WITH_QT:BOOL=OFF -DSG_WRAP_PYTHON:BOOL=ON -DDEPENDENCIES_BUILD_DIR:PATH=$(DEPENDENCIES_BUILD_DIR) -DBoost_USE_STATIC_LIBS:BOOL=ON -S "$(Build.SourcesDirectory)" -B "$(Build.SourcesDirectory)/build"
         cmake --build "$(Build.SourcesDirectory)/build"
       workingDirectory: '$(Build.SourcesDirectory)'
       displayName: 'Build project'
@@ -71,7 +71,7 @@ stages:
         python -m pip install ninja
         python -m pip install -r requirements-dev.txt
         mkdir build
-        cmake -G Ninja -DCMAKE_BUILD_TYPE=Release -DBUILD_SHARED_LIBS:BOOL=OFF -DCMAKE_OSX_DEPLOYMENT_TARGET:STRING=10.9 -DCMAKE_OSX_ARCHITECTURES:STRING=x86_64 -DSG_BUILD_TESTING:BOOL=ON -DSG_MODULE_ANALYZE:BOOL=ON -DSG_MODULE_COMPARE:BOOL=ON -DSG_MODULE_LOCATE:BOOL=ON -DSG_MODULE_GENERATE:BOOL=ON -DSG_MODULE_DYNAMICS:BOOL=ON -DSG_MODULE_VISUALIZE:BOOL=ON -DSG_MODULE_VISUALIZE_WITH_QT:BOOL=OFF -DSG_WRAP_PYTHON:BOOL=ON -DDEPENDENCIES_BUILD_DIR:PATH=$(DEPENDENCIES_BUILD_DIR) -DBoost_USE_STATIC_LIBS:BOOL=ON -S "$(Build.SourcesDirectory)" -B "$(Build.SourcesDirectory)/build"
+        cmake -G Ninja -DCMAKE_BUILD_TYPE=Release -DBUILD_SHARED_LIBS:BOOL=OFF -DCMAKE_OSX_DEPLOYMENT_TARGET:STRING=10.9 -DCMAKE_OSX_ARCHITECTURES:STRING=x86_64 -DSG_BUILD_TESTING:BOOL=ON -DSG_BUILD_TESTING_INTERACTIVE:BOOL=OFF -DSG_MODULE_ANALYZE:BOOL=ON -DSG_MODULE_COMPARE:BOOL=ON -DSG_MODULE_LOCATE:BOOL=ON -DSG_MODULE_GENERATE:BOOL=ON -DSG_MODULE_DYNAMICS:BOOL=ON -DSG_MODULE_VISUALIZE:BOOL=ON -DSG_MODULE_VISUALIZE_WITH_QT:BOOL=OFF -DSG_WRAP_PYTHON:BOOL=ON -DDEPENDENCIES_BUILD_DIR:PATH=$(DEPENDENCIES_BUILD_DIR) -DBoost_USE_STATIC_LIBS:BOOL=ON -S "$(Build.SourcesDirectory)" -B "$(Build.SourcesDirectory)/build"
         cmake --build "$(Build.SourcesDirectory)/build"
       workingDirectory: '$(Build.SourcesDirectory)'
       displayName: 'Build project'
@@ -111,7 +111,7 @@ stages:
         python -m pip install ninja
         python -m pip install -r requirements-dev.txt
         mkdir build
-      cmake -G Ninja -DCMAKE_BUILD_TYPE=Release -DBUILD_SHARED_LIBS:BOOL=OFF -DCMAKE_C_COMPILER="cl.exe" -DCMAKE_CXX_COMPILER="cl.exe" -DSG_BUILD_TESTING:BOOL=ON -DSG_MODULE_ANALYZE:BOOL=ON -DSG_MODULE_COMPARE:BOOL=ON -DSG_MODULE_LOCATE:BOOL=ON -DSG_MODULE_GENERATE:BOOL=ON -DSG_MODULE_DYNAMICS:BOOL=ON -DSG_MODULE_VISUALIZE:BOOL=ON -DSG_MODULE_VISUALIZE_WITH_QT:BOOL=OFF -DSG_WRAP_PYTHON:BOOL=ON -DDEPENDENCIES_BUILD_DIR:PATH=$(DEPENDENCIES_BUILD_DIR) -DBoost_USE_STATIC_LIBS:BOOL=ON -S "$(Build.SourcesDirectory)" -B "$(Build.SourcesDirectory)\build"
+        cmake -G Ninja -DCMAKE_BUILD_TYPE=Release -DBUILD_SHARED_LIBS:BOOL=OFF -DCMAKE_C_COMPILER="cl.exe" -DCMAKE_CXX_COMPILER="cl.exe" -DSG_BUILD_TESTING:BOOL=ON -DSG_BUILD_TESTING_INTERACTIVE:BOOL=OFF -DSG_MODULE_ANALYZE:BOOL=ON -DSG_MODULE_COMPARE:BOOL=ON -DSG_MODULE_LOCATE:BOOL=ON -DSG_MODULE_GENERATE:BOOL=ON -DSG_MODULE_DYNAMICS:BOOL=ON -DSG_MODULE_VISUALIZE:BOOL=ON -DSG_MODULE_VISUALIZE_WITH_QT:BOOL=OFF -DSG_WRAP_PYTHON:BOOL=ON -DDEPENDENCIES_BUILD_DIR:PATH=$(DEPENDENCIES_BUILD_DIR) -DBoost_USE_STATIC_LIBS:BOOL=ON -S "$(Build.SourcesDirectory)" -B "$(Build.SourcesDirectory)\build"
         cmake --build "$(Build.SourcesDirectory)\build"
       workingDirectory: '$(Build.SourcesDirectory)'
       displayName: 'Build project'
