Clean with clang-tidy
Add `SG_BUILD_ENABLE_CLANGTIDY` option that will populate
`CMAKE_CXX_CLANG_TIDY` and run clang-tidy on the whole repository.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,6 +25,8 @@ option(SG_BUILD_CLI "Build cpp-scripts with CLI executables." ON)
 option(SG_BUILD_TESTING "Enable Tests" OFF)
 option(SG_BUILD_ENABLE_VALGRIND "Enable Valgrind as a memchecker for tests (require debug symbols)" OFF)
 mark_as_advanced(SG_BUILD_ENABLE_VALGRIND)
+option(SG_BUILD_ENABLE_CLANGTIDY "Enable clangtidy for tests. Populates CMAKE_CXX_CLANG_TIDY." OFF)
+mark_as_advanced(SG_BUILD_ENABLE_CLANGTIDY)
 option(SG_MODULE_SCRIPTS "High level functions (no CLI)." ON)
 option(SG_MODULE_ANALYZE "Analyze the graph properties." ON)
 option(SG_MODULE_COMPARE "Logic to compare and merge low and high information graphs." ON)
@@ -212,6 +214,51 @@ if(SG_BUILD_TESTING)
     set(MEMORYCHECK_COMMAND_OPTIONS "--trace-children=yes --leak-check=full")
     include(Dart)
   endif()
+
+  if(SG_BUILD_ENABLE_CLANGTIDY)
+    find_program (CLANG_TIDY_EXE clang-tidy)
+    set(CLANG_TIDY_CHECKS "\
+    bugprone-*,-bugprone-exception-escape*,misc-*,\
+    -misc-non-private-member-variables-in-classes*,\
+    clang-analyzer-*,\
+    modernize-*,-modernize-use-trailing-return-type*,-modernize-avoid-c-arrays*,\
+    performance-*,portability-*,\
+    readability-*,-readability-magic-numbers*,-readability-qualified-auto*,\
+    -readability-isolate-declaration*,-readability-convert-member-functions-to-static*\
+    ")
+    set(_all_headers "modules/core/include/*" "modules/extract/include/*")
+    if(SG_MODULE_VISUALIZE)
+      list(APPEND _all_headers "modules/visualize/include/*")
+    endif()
+    if(SG_MODULE_ANALYZE)
+      list(APPEND _all_headers "modules/analyze/include/*")
+    endif()
+    if(SG_MODULE_LOCATE)
+      list(APPEND _all_headers "modules/locate/include/*")
+    endif()
+    if(SG_MODULE_COMPARE)
+      list(APPEND _all_headers "modules/compare/include/*")
+    endif()
+    if(SG_MODULE_GENERATE)
+      list(APPEND _all_headers "modules/generate/include/*")
+    endif()
+    if(SG_MODULE_DYNAMICS)
+      list(APPEND _all_headers "modules/dynamics/include/*")
+    endif()
+    if(SG_REQUIRES_ITK)
+      list(APPEND _all_headers "modules/itk_bridge/include/*")
+    endif()
+    if(SG_MODULE_TREE)
+      list(APPEND _all_headers "modules/tree/include/*")
+    endif()
+    if(SG_MODULE_SCRIPTS)
+      list(APPEND _all_headers "modules/scripts/include/*")
+    endif()
+    string(REPLACE ";" "," _all_headers_string "${_all_headers}")
+    set(CMAKE_CXX_CLANG_TIDY "${CLANG_TIDY_EXE};-checks=${CLANG_TIDY_CHECKS};-header-filter=${_all_headers_string}"
+      CACHE STRING "" FORCE)
+  endif()
+
   enable_testing()
   set(GTEST_LIBRARIES gtest gtest_main gmock)
   include(GoogleTest)
