Allow create_vertex_to_radius_map to work with any graph type
GraphType is changed for a template parameter TGraph.
However, an `extern template` and explicit instantiation for `TGraph=GraphType`
is kept, to avoid increase on compilation time.

This allow create_vertex_to_radius_map to work with filtered graphs,
such the one resulting in connected_components.

--- a/modules/itk_bridge/CMakeLists.txt
+++ b/modules/itk_bridge/CMakeLists.txt
@@ -38,6 +38,10 @@ target_link_libraries(${SG_MODULE_${SG_MODULE_NAME}_LIBRARY}
   )
 add_dependencies(${SG_MODULE_${SG_MODULE_NAME}_LIBRARY} ${SG_MODULE_INTERNAL_DEPENDS})
 
+if(SG_BUILD_TESTING)
+  add_subdirectory(test)
+endif()
+
 install(TARGETS ${SG_MODULE_${SG_MODULE_NAME}_LIBRARY}
         EXPORT SGEXTTargets
         RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR} COMPONENT runtime
