Add sgext.itk.segmentation submodule
Include most used segmentation functions to work with images wrapped in sgext.
Before, a conversion from-to ITK was needed, and write down the pipelines
for ITK.
This provide useful helpers and tuned pipelines.

Still, most effective is to select seeds (using a safe binarization with thresholds)
and perform a region_growing algorithm.

Includes cpp and python wrappings.

TODO: level_set pipeline is not really well tested (too many parameters).

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -108,6 +108,12 @@ if(SG_REQUIRES_ITK)
     ITKImageGrid
     ITKImageIntensity
     ITKImageStatistics
+    # from segmentation_functions
+    ITKDistanceMap
+    ITKImageGradient
+    ITKLevelSets
+    ITKThresholding
+    ITKRegionGrowing
     ${ITKVtkGlueModule}
     ${ITKImageIOModule}
     )
