--- a/modules/itk_bridge/test/CMakeLists.txt
+++ b/modules/itk_bridge/test/CMakeLists.txt
@@ -3,6 +3,7 @@ set(SG_MODULE_${SG_MODULE_NAME}_TEST_DEPENDS
   ${SG_MODULE_${SG_MODULE_NAME}_DEPENDS}
   ${GTEST_LIBRARIES})
 set(SG_MODULE_${SG_MODULE_NAME}_TESTS
+  test_segmentation_functions.cpp
   )
 if(SG_MODULE_SCRIPTS)
   list(APPEND SG_MODULE_${SG_MODULE_NAME}_TEST_DEPENDS
